gitops/overlays/garu-home/immich/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    namespace: immich
