gitops/overlays/garu-home/immich/ingress.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-server-photo-garu-me
  namespace: immich
spec:
  hostnames:
    - photo.garu.me
  parentRefs:
    - name: garu-me
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
      matches:
        - path:
            type: PathPrefix
            value: /
      name: rule-0
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-server-photo-garu-me-http
  namespace: immich
spec:
  hostnames:
    - photo.garu.me
  parentRefs:
    - name: garu-me
      namespace: traefik
      sectionName: web
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 308
          type: RequestRedirect
      matches:
        - path:
            type: PathPrefix
            value: /
